Added food order controller

--- a/app/views/food_orders/show.html.erb
+++ b/app/views/food_orders/show.html.erb
@@ -1,2 +1,1 @@
-<h1>FoodOrders#show</h1>
-<p>Find me in app/views/food_orders/show.html.erb</p>
+<%= render partial: 'food_order', object: @food_order, locals: { show_details_link: false } %>
