fixed ordnum ordernum typo

--- a/app/views/food_orders/_food_order.html.erb
+++ b/app/views/food_orders/_food_order.html.erb
@@ -1,4 +1,4 @@
-<h2>Order <%= food_order.ordnum %></h2>
+<h2>Order <%= food_order.ordernum %></h2>
 <p>
   <strong>Item Name: </strong>
   <%= food_order.food.name %>
