Added more links to the header

--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -3,6 +3,8 @@
     <ul>
       <li>
           <%= link_to 'Home', root_path %>
+          <%= link_to 'Orders', food_orders_path %>
+          <%= link_to 'Foods', foods_index_path %>
       </li>
     </ul>
   </nav>
