--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,2 +1,1 @@
-<h1>Foods#show</h1>
-<p>Find me in app/views/foods/show.html.erb</p>
+<%= render partial: 'food', object: @food, locals: { show_details_link: false } %>
