Installed the will_paginate gem

--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -25,6 +25,15 @@
   <strong>Cost: </strong>
   <%= food.cost %>
 </p>
+
+<% if food.picture != "" %>
+  <%= image_tag food.picture %>
+<% end %>
+
+<% if food.picture != "" %>
+  <%= image_tag food.picture.thumb %>
+<% end %>
+
 <% if show_details_link %>
   <p>
     <%= link_to 'View Details', food %>
