Got ransack and will_paginate working together

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -13,5 +13,5 @@
 <%= render partial: 'food', collection: @foods, locals: { show_details_link: true } %>
 
 <div>
-  <%= paginate @foods %>
+  <%= will_paginate @foods %>
 </div>
