--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -5,6 +5,7 @@
           <%= link_to 'Home', root_path %>
           <%= link_to 'Orders', food_orders_index_path %>
           <%= link_to 'Foods', foods_path %>
+          <%= link_to "About/Contact", "/AboutContact.html" %>
       </li>
     </ul>
   </nav>
