Added the Cake Category

--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -5,6 +5,9 @@
           <%= link_to 'Home', root_path %>
           <%= link_to 'Orders', food_orders_index_path %>
           <%= link_to 'Foods', foods_path %>
+          <%= link_to 'Cakes', '/cat_cake' %>
+          <%= link_to 'About/Contact Us', '/about_contacts' %>
+          <%= link_to 'About/Contact Us', '/about_contacts' %>
           <%= link_to 'About/Contact Us', '/about_contacts' %>
       </li>
     </ul>
