Added the Cookie Category

--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -6,8 +6,8 @@
           <%= link_to 'Orders', food_orders_index_path %>
           <%= link_to 'Foods', foods_path %>
           <%= link_to 'Cakes', '/cat_cake' %>
-          <%= link_to 'About/Contact Us', '/about_contacts' %>
-          <%= link_to 'About/Contact Us', '/about_contacts' %>
+          <%= link_to 'Cupcakes', '/cat_cup' %>
+          <%= link_to 'Cookies', '/cat_cook' %>
           <%= link_to 'About/Contact Us', '/about_contacts' %>
       </li>
     </ul>
